2012-12-06  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.1.0-rc3 Released.

	* chan_local: Fix local_pvt ref leak in local_devicestate().

	Regression introduced by ASTERISK-20390 fix.

	(closes issue ASTERISK-20769)
	Reported by: rmudgett

2012-12-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.1.0-rc2 Released.

	* Fix a SIP request memory leak with TLS connections.

	During the TLS re-work in chan_sip some TLS specific code was moved
	into a separate function. This function operates on a copy of the
	incoming SIP request. This copy was never deinitialized causing a
	memory leak for each request processed.

	This function is now given a SIP request structure which it can use
	to copy the incoming request into. This reduces the amount of memory
	allocations done since the internal allocated components are reused
	between packets and also ensures the SIP request structure is
	deinitialized when the TLS connection is torn down.

	(closes issue ASTERISK-20763)
	Reported by: deti

2012-11-06  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.1.0-rc1 Released.

2012-11-06 12:09 +0000 [r375925]  Joshua Colp <jcolp@digium.com>

	* channels/chan_motif.c: Fix a bug where our Motif ICE candidates
	  were not quite proper, and make us more forgiving. An issue was
	  reported on the mailing list where calling would result in an
	  "Incomplete ICE-UDP candidate received on session" error message.
	  This is the result of the ICE-UDP candidate code not placing a
	  "network" attribute within the candidates. This is now done. To
	  increase compatibility though I have removed the requirement for
	  the "network" attribute to exist within ICE-UDP candidates that
	  are received since we don't actually require the value. Reported
	  on the mailing list by Jean-Denis Girard.

2012-11-05 23:09 +0000 [r375895]  Matthew Jordan <mjordan@digium.com>

	* main/timing.c, main/channel.c, /, res/res_timing_pthread.c,