@@ -1,1 +1,1 @@
-11.1.0-rc2
+11.1.0
